--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -239,6 +239,7 @@
                         <segue destination="Yxn-UT-deK" kind="showDetail" id="Qtg-bG-0h6"/>
                         <segue destination="WcM-8J-SIJ" kind="showDetail" id="7fe-9s-IeC"/>
                         <segue destination="dsG-uq-ihR" kind="showDetail" id="T8Y-p2-4KT"/>
+                        <segue destination="r08-qg-86v" kind="showDetail" id="Err-KI-Xqn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UeP-CS-nkO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1290,6 +1291,191 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7oe-1g-d91" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="832.5" y="1449"/>
+        </scene>
+        <!--设备管理-->
+        <scene sceneID="K31-6p-weh">
+            <objects>
+                <viewController storyboardIdentifier="CHDeviceManagerController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="r08-qg-86v" customClass="CHDeviceManagerController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6qk-2K-89a"/>
+                        <viewControllerLayoutGuide type="bottom" id="YPo-w5-HiC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BX3-Dn-fvx">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="336-Fg-TiK">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IdentifierMessageCell" rowHeight="95" id="w45-iI-B46" customClass="CMMessageCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="w45-iI-B46" id="ASR-Qy-f4P">
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="94.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZV-a2-FV0">
+                                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="dJw-nJ-IbK"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="dJw-nJ-IbK"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="widthClass=compact">
+                                                        <mask key="constraints">
+                                                            <include reference="dJw-nJ-IbK"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOT-9Q-fGT">
+                                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30.5" id="0nx-MS-KNw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="0nx-MS-KNw"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="widthClass=compact">
+                                                        <mask key="constraints">
+                                                            <include reference="0nx-MS-KNw"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Dx-FC-ner">
+                                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25.5" id="YJp-3K-lAN"/>
+                                                        <constraint firstAttribute="width" constant="150" id="q5B-Kv-3my"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="YJp-3K-lAN"/>
+                                                            <exclude reference="q5B-Kv-3my"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="widthClass=compact">
+                                                        <mask key="constraints">
+                                                            <include reference="YJp-3K-lAN"/>
+                                                            <include reference="q5B-Kv-3my"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="tOT-9Q-fGT" secondAttribute="trailing" id="1aX-Ke-w2C">
+                                                    <variation key="widthClass=compact" constant="169"/>
+                                                </constraint>
+                                                <constraint firstItem="fZV-a2-FV0" firstAttribute="trailing" secondItem="ASR-Qy-f4P" secondAttribute="trailingMargin" constant="15" id="Cg4-BL-DIc"/>
+                                                <constraint firstItem="tOT-9Q-fGT" firstAttribute="leading" secondItem="ASR-Qy-f4P" secondAttribute="leadingMargin" constant="15" id="J2n-5I-1ue"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="0Dx-FC-ner" secondAttribute="trailing" id="OF1-Bd-tev"/>
+                                                <constraint firstItem="fZV-a2-FV0" firstAttribute="top" secondItem="ASR-Qy-f4P" secondAttribute="topMargin" constant="10" id="PDI-BU-aqR"/>
+                                                <constraint firstItem="tOT-9Q-fGT" firstAttribute="top" secondItem="fZV-a2-FV0" secondAttribute="bottom" constant="9" id="YqN-jn-mcx"/>
+                                                <constraint firstItem="fZV-a2-FV0" firstAttribute="leading" secondItem="ASR-Qy-f4P" secondAttribute="leadingMargin" constant="15" id="mSo-X6-cOi"/>
+                                                <constraint firstItem="0Dx-FC-ner" firstAttribute="top" secondItem="fZV-a2-FV0" secondAttribute="bottom" constant="14" id="y7D-9E-1VV"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="fZV-a2-FV0"/>
+                                                    <exclude reference="tOT-9Q-fGT"/>
+                                                    <exclude reference="0Dx-FC-ner"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <exclude reference="J2n-5I-1ue"/>
+                                                    <exclude reference="YqN-jn-mcx"/>
+                                                    <exclude reference="1aX-Ke-w2C"/>
+                                                    <exclude reference="y7D-9E-1VV"/>
+                                                    <exclude reference="OF1-Bd-tev"/>
+                                                    <exclude reference="mSo-X6-cOi"/>
+                                                    <exclude reference="Cg4-BL-DIc"/>
+                                                    <exclude reference="PDI-BU-aqR"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="widthClass=compact">
+                                                <mask key="subviews">
+                                                    <include reference="fZV-a2-FV0"/>
+                                                    <include reference="tOT-9Q-fGT"/>
+                                                    <include reference="0Dx-FC-ner"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <include reference="J2n-5I-1ue"/>
+                                                    <include reference="YqN-jn-mcx"/>
+                                                    <include reference="1aX-Ke-w2C"/>
+                                                    <include reference="y7D-9E-1VV"/>
+                                                    <include reference="OF1-Bd-tev"/>
+                                                    <include reference="mSo-X6-cOi"/>
+                                                    <include reference="Cg4-BL-DIc"/>
+                                                    <include reference="PDI-BU-aqR"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="labDetail" destination="tOT-9Q-fGT" id="8GL-Wv-IIa"/>
+                                            <outlet property="labTime" destination="0Dx-FC-ner" id="1cb-je-cra"/>
+                                            <outlet property="labTitle" destination="fZV-a2-FV0" id="zm1-lj-yZk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="r08-qg-86v" id="6bV-TF-rXR"/>
+                                    <outlet property="delegate" destination="r08-qg-86v" id="3bd-wa-pAa"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YPo-w5-HiC" firstAttribute="top" secondItem="336-Fg-TiK" secondAttribute="bottom" id="2Hb-4I-nWh"/>
+                            <constraint firstItem="336-Fg-TiK" firstAttribute="leading" secondItem="BX3-Dn-fvx" secondAttribute="leading" id="8Pn-bN-fwS"/>
+                            <constraint firstItem="336-Fg-TiK" firstAttribute="top" secondItem="6qk-2K-89a" secondAttribute="bottom" id="E3A-8g-CVN">
+                                <variation key="widthClass=compact" constant="-64"/>
+                            </constraint>
+                            <constraint firstAttribute="trailing" secondItem="336-Fg-TiK" secondAttribute="trailing" id="frd-M3-Tzs"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="336-Fg-TiK"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="8Pn-bN-fwS"/>
+                                <exclude reference="E3A-8g-CVN"/>
+                                <exclude reference="frd-M3-Tzs"/>
+                                <exclude reference="2Hb-4I-nWh"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="336-Fg-TiK"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="8Pn-bN-fwS"/>
+                                <include reference="E3A-8g-CVN"/>
+                                <include reference="frd-M3-Tzs"/>
+                                <include reference="2Hb-4I-nWh"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="设备管理" id="bop-Ec-DPW"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="336-Fg-TiK" id="dNq-8a-D7Y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Lv-P7-3Qf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1630.5" y="1447"/>
         </scene>
         <!--昵称-->
         <scene sceneID="cyN-Kn-otH">
